--- a/project-CaLLaR - Final1.ipynb
+++ b/project-CaLLaR - Final1.ipynb
@@ -1425,6 +1425,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ROC graph"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 225,
    "metadata": {},
